unpackaged/main/default/objects/RX_licence__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
                <default>true</default>
                <label>Administration</label>
            </value>
            <value>
                <fullName>Annual billing</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>Billing/Measured</fullName>
            </value>
            <value>
                <fullName>Billing/unmeasured</fullName>
            </value>
            <value>
                <fullName>Billing General</fullName>
            </value>
            <value>
                <fullName>Bill Print</fullName>
            </value>
            <value>
                <fullName>BPM Acc Serv</fullName>
            </value>
            <value>
                <fullName>BPM New Conn</fullName>
            </value>
            <value>
                <fullName>Budgets</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Charges</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Customer Management</fullName>
            </value>
            <value>
                <fullName>Doc Management</fullName>
            </value>
            <value>
                <fullName>Document Image</fullName>
            </value>
            <value>
                <fullName>Ebilling</fullName>
            </value>
            <value>
                <fullName>Extracts</fullName>
            </value>
            <value>
                <fullName>Free metering</fullName>
            </value>
            <value>
                <fullName>HVI (Scotland)</fullName>
            </value>
            <value>
                <fullName>Interface</fullName>
            </value>
            <value>
                <fullName>Non Rapid</fullName>
            </value>
            <value>
                <fullName>On line Pay</fullName>
            </value>
            <value>
                <fullName>OpenWater</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Rapid OA</fullName>
            </value>
            <value>
                <fullName>Recovery</fullName>
            </value>
            <value>
                <fullName>Refunds</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>