unpackaged/main/default/objects/RX_licence__c/fields/AWB__c.field-meta.xml
<CustomField>
    <fullName>AWB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AWB</label>
    <type>Checkbox</type>
</CustomField>