unpackaged/main/default/objects/RX_licence__c/fields/Business_benefits__c.field-meta.xml
<CustomField>
    <fullName>Business_benefits__c</fullName>
    <inlineHelpText>What business benefits does this licence bring to the client?</inlineHelpText>
    <label>Business benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>