unpackaged/main/default/objects/RX_licence__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <description>Customer who this functionality was initially developed for.</description>
    <inlineHelpText>Customer who this functionality was initially developed for.</inlineHelpText>
    <label>Client</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RX_Licence_Clients</valueSetName>
    </valueSet>
</CustomField>