unpackaged/main/default/objects/RX_licence__c/fields/Cost_to_Serve__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Serve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cost to Serve business benefit</description>
    <label>Cost to Serve</label>
    <type>Checkbox</type>
</CustomField>