unpackaged/main/default/objects/RX_licence__c/fields/Debt__c.field-meta.xml
<CustomField>
    <fullName>Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Business benefit of debt</description>
    <label>Debt</label>
    <type>Checkbox</type>
</CustomField>