unpackaged/main/default/objects/RX_licence__c/fields/First_commissioned__c.field-meta.xml
<CustomField>
    <fullName>First_commissioned__c</fullName>
    <label>First commissioned</label>
    <type>Date</type>
</CustomField>