unpackaged/main/default/objects/RX_licence__c/fields/GDPR_compliance__c.field-meta.xml
<CustomField>
    <fullName>GDPR_compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GDPR compliance business benefit</description>
    <label>GDPR compliance</label>
    <type>Checkbox</type>
</CustomField>