unpackaged/main/default/objects/RX_licence__c/fields/Initial_sale_price__c.field-meta.xml
<CustomField>
    <fullName>Initial_sale_price__c</fullName>
    <label>Initial sale price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>