unpackaged/main/default/objects/RX_licence__c/fields/NIW__c.field-meta.xml
<CustomField>
    <fullName>NIW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NIW</label>
    <type>Checkbox</type>
</CustomField>