unpackaged/main/default/objects/RX_licence__c/fields/Original_form_number__c.field-meta.xml
<CustomField>
    <fullName>Original_form_number__c</fullName>
    <label>Original form number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>