unpackaged/main/default/objects/RX_licence__c/fields/PWL__c.field-meta.xml
<CustomField>
    <fullName>PWL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PWL</label>
    <type>Checkbox</type>
</CustomField>