unpackaged/main/default/objects/RX_licence__c/fields/Related_Forms__c.field-meta.xml
<CustomField>
    <fullName>Related_Forms__c</fullName>
    <description>List related form numbers separated by commas</description>
    <inlineHelpText>List related form numbers separated by commas</inlineHelpText>
    <label>Related Forms</label>
    <length>128</length>
    <type>Text</type>
</CustomField>