unpackaged/main/default/objects/RX_licence__c/fields/SSE__c.field-meta.xml
<CustomField>
    <fullName>SSE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSE</label>
    <type>Checkbox</type>
</CustomField>