unpackaged/main/default/objects/RX_licence__c/fields/SSW__c.field-meta.xml
<CustomField>
    <fullName>SSW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSW</label>
    <type>Checkbox</type>
</CustomField>