unpackaged/main/default/objects/RX_licence__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>BPM</fullName>
            </value>
            <value>
                <fullName>GUI</fullName>
                <default>true</default>
                <label>GUI</label>
            </value>
            <value>
                <fullName>OA</fullName>
            </value>
            <value>
                <fullName>WSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>