unpackaged/main/default/objects/RX_licence__c/fields/Version_released_in__c.field-meta.xml
<CustomField>
    <fullName>Version_released_in__c</fullName>
    <label>Version released in</label>
    <length>100</length>
    <type>Text</type>
</CustomField>