unpackaged/main/default/objects/RX_licence__c/fields/Vulnerable_Customers__c.field-meta.xml
<CustomField>
    <fullName>Vulnerable_Customers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vulnerable Customers business benefit</description>
    <label>Vulnerable Customers</label>
    <type>Checkbox</type>
</CustomField>