unpackaged/main/default/objects/RX_licence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Original_form_number__c</columns>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Date_made_available__c</columns>
    <columns>Initial_sale_price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>